[tool.poetry]
name = "alexbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
KahootPY = "^0.1.4"
"discord.py" = "^1.4.1"
aiohttp = "^3.6.2"
bs4 = "^0.0.1"
flask = "^1.1.2"
git-kahoot = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
