[tool.poetry]
name = "repl_python3_AlexBot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
replit = "^2.0.0"
aiohttp = "^3.6.3"
bs4 = "^0.0.1"
discord = "^1.0.1"
git-kahoot = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
